@@ -456,6 +456,10 @@ body.dark-theme .collapse{
         color: $text-color-dark;
     }
 
+    table li{
+        color: black;
+    }
+
     .dropdown-menu{
         background-color: #333131 !important;
         color: $text-color-dark;
