@@ -1,0 +1,147 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Modifica articoli</title>
+        <link rel="stylesheet" type="text/css" href="../../css/structure.css">
+        <link rel="icon" href="../../img/static/logo.svg">
+    </head>
+    <body>
+        <div id="navbar-container"></div>
+        <div id="navbar-spacer-top"></div>
+
+        <div class="container mb-5">
+            <div class="row">
+                <div class="col-12">
+                    <h2>Modifica auto</h2>
+                </div>
+            </div>
+        </div>
+
+        <div class="container mb-5">
+            <div class="row mb-3">
+                <div class="col-12">
+                    <h2>Modifica marchio</h2>
+                </div>
+            </div>
+            <div class="row mb-3">
+                <div class="col-md-6">
+                    <select class="form-select form-input-item" aria-label="Default select example" id="brand-choice-brand"></select>
+                    <br>
+                    <div id="brand-change-section">
+                        <label for="formFile" class="form-label form-input-item">Inserisci logo marchio</label>
+                        <input class="form-control form-input-item" type="file" accept="image/*" id="file-brand-logo">
+                        <div class="input-group">
+                            <span class="input-group-text">https://</span>
+                            <input type="text" class="form-control" id="url-brand-image" aria-describedby="basic-addon3 basic-addon4">
+                        </div>
+                        <div class="form-text normal-text small-text" id="basic-addon4">Se vuoi puoi inserire l'URL al posto del percorso del file</div>
+                    </div>
+                </div>
+
+                <div class="col-md-6 d-flex justify-content-center align-items-center" id="brand-card-preview">
+                    <h5>Anteprima</h5>
+                    <div id="brand-card-container"></div>
+                </div>
+            </div>
+            <div class="row" id="submit-brand-section">
+                <div class="col-12 mb-2 d-flex justify-content-center gap-2">
+                    <button class="btn btn-secondary" id="btn-change-brand">Conferma modifiche</button>
+                    <button class="btn btn-secondary" id="btn-cancel-brand">Annulla modifiche</button>
+                    <button class="btn btn-secondary" id="btn-delete-brand">Elimina marchio</button>
+                </div>
+                <div class="col-12" id="brand-change-alert"></div>
+            </div>
+        </div>
+
+        <div class="container mb-5">
+            <div class="row mb-3">
+                <div class="col-12">
+                    <h2>Modifica optional</h2>
+                </div>
+            </div>
+            <div class="row mb-3">
+                <div class="col-md-6">
+                    <select class="form-select form-input-item" aria-label="Default select example" id="optional-choice-optional"></select>
+                </div>
+                <div class="col-md-6">
+                    <label for="exampleFormControlTextarea1" class="form-label form-input-item">Descrizione</label>
+                    <textarea class="form-control form-input-item" id="input-optional-description" rows="3"></textarea><br>
+                    <label for="customRange3" class="form-label form-input-item d-flex justify-content-between align-items-center">Prezzo <span class="range-value" id="output-optional-price"></span></label>
+                    <input type="range" class="form-range form-input-item" min="50" max="5000" step="20" id="input-optional-price">
+                </div>
+            </div>
+            <div class="row" id="submit-optional-section">
+                <div class="col-12 mb-2 d-flex justify-content-center gap-2">
+                    <button class="btn btn-secondary" id="btn-change-optional">Conferma modifiche</button>
+                    <button class="btn btn-secondary" id="btn-cancel-optional">Annulla modifiche</button>
+                    <button class="btn btn-secondary" id="btn-delete-optional">Elimina optional</button>
+                </div>
+                <div class="col-12" id="optional-change-alert"></div>
+            </div>
+        </div>
+
+        <div id="body-spacer"></div>
+        
+        <!-- Footer -->
+        <footer>
+            <div class="container">
+            <div class="row normal-text">
+                <div class="col-md-6 col-lg-3 footer-column">
+                <h5>Autori</h5>
+                <ul class="unordered-list_no-pointed">
+                    <li><a href="https://github.com/danielechiarion" target="_blank" class="footer-link">Daniele Chiarion</a></li>
+                    <li><a href="https://github.com/crepaldimattia" target="_blank" class="footer-link">Mattia Crepaldi</a></li>
+                    <li><a href="https://github.com/DavideFocalors79" target="_blank" class="footer-link">Davide Laghi</a></li>
+                </ul>
+                </div>
+                <div class="col-md-6 col-lg-6 footer-column">
+                <h5 align="center">La scuola</h5>
+                <div class="row">
+                    <div class="col-3 d-flex justify-content-end align-items-center">
+                    <img src="https://iisviolamarchesini.edu.it/wp-content/uploads/2023/10/logo.svg" height="80" width="80">
+                    </div>
+                    <div class="col-9">
+                    <p><a href="https://iisviolamarchesini.edu.it" target="_blank" class="footer-link">IIS Viola Marchesini Rovigo</a></p>
+                    <p>Via De Gasperi 21 - 45100 Rovigo (RO)</p>
+                    </div>
+                </div>
+                </div>
+                <div class="col-md-6 col-lg-3 footer-column">
+                <h5>I nostri servizi</h5>
+                <li><a href="car-configurator.html" class="footer-link">Configuratore</a></li>
+                <li><a href="purchase-list.html" class="footer-link">Lista acquisti</a></li>
+                <li><a href="shopping-cart.html" class="footer-link">Carrello</a></li>
+                <li><a href="wish-list.html" class="footer-link">Lista dei desideri</a></li>
+                </div>
+            </div>
+            <div class="row normal-text">
+                <div class="col-12 gx-3 mb-3">
+                <a href="terms-and-conditions.html" class="footer-link">Termini e condizioni d'uso del sito</a>
+                </div>
+            </div>
+            <div class="row normal-text">
+                <div class="col-4 d-flex justify-content-end align-items-center">
+                <img src="../../img/static/logo.svg" height="80" width="80" class="footer-icon">
+                </div>
+                <div class="col-8 d-flex justify-content-start align-items-center">
+                <h1 align="center">Concessionario Laghi</h1>
+                </div>
+            </div>
+            </div>
+        </footer>
+
+        <div id="navbar-spacer-bottom"></div>
+
+        <!-- Add .css style files -->
+        <link rel="stylesheet" type="text/css" href="../../css/style.css">
+        <!-- Add js scripts -->
+        <script src="../../bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+        <script type="module" src="../../js-frontend/pagination.js"></script>
+        <script type="module" src="../../js-frontend/custom-navbar.js"></script>
+        <script type="module" src="../../js-frontend/theme.js"></script>
+        <script type="module" src="../../js-frontend/search-input.js"></script>
+        <script src="../../js-frontend/ping-reply.js"></script>
+        <script type="module" src="../../js-frontend/print-items_admin-change-items.js"></script>
+        <script type="module" src="../../js-frontend/page_admin-change-items.js"></script>
+    </body>
+</html>
