@@ -66,7 +66,7 @@
                         </tr>
                         <tr>
                             <th scope="row">Optional attivati</th>
-                            <td id="optionals-activated">
+                            <td id="optionals-activated" style="color: black !important;">
                                 
                             </td>
                         </tr>
