@@ -67,7 +67,7 @@
                         </tr>
                         <tr>
                             <th scope="row">Optional disponibili</th>
-                            <td id="optionals-available">
+                            <td id="optionals-available" style="color: black !important;">
                                 
                             </td>
                         </tr>
